package dev.krazymanj.shopito.ui

@Suppress("MayBeConstant")
object UITestTag {
    object ShopitoNavigationBar {
        val Bar = "ShopitoNavigationBar_Bar"
        val ShoppingListsSummaryScreen = "ShopitoNavigationBar_ShoppingListsSummaryScreen"
        val ShoppingListsScreen = "ShopitoNavigationBar_ShoppingListsScreen"
        val MapViewScreen = "ShopitoNavigationBar_MapViewScreen"
    }
    object ShoppingList {
        val ShoppingList = "ShoppingList_ShoppingList"
        val ShoppingListName = "ShoppingList_ShoppingListName"
        val ShoppingListDescription = "ShoppingList_ShoppingListDescription"
    }
    object QuickAdd {
        val QuickAdd = "QuickAdd_QuickAdd"
        val TextField = "QuickAdd_TextField"
        val AddButton = "QuickAdd_AddButton"
    }
    object ShoppingItem {
        val ShoppingItem = "ShoppingItem_ShoppingItem"
        val Name = "ShoppingItem_Name"
        val Amount = "ShoppingItem_Amount"
    }
}